Mon Oct 13 10:48:24 1997  Ezra Peisach  <epeisach@mit.edu>

	* alt_prof.c (kadm5_get_config_params): When KADM5_CONFIG_ENCTYPES
           is set on the input parameters, allocate a new copy of the
           key_salts for the output parameters.
	(kadm5_free_config_params): Free the admin_server and admin_lockfile
	   names. 

Tue Oct  7 07:48:12 1997  Ezra Peisach  <epeisach@mit.edu>

	* logger.c: Include ctype.h for isspace definition.

Tue Jul  1 02:31:07 1997  Tom Yu  <tlyu@mit.edu>

	* kadm_rpc.h, kadm_rpc_xdr.c: Add support for setv4key.

Sun Jun 29 14:52:04 1997  Tom Yu  <tlyu@mit.edu>

	* kadm_err.et: Add support for kadm5_setv4key_principal.

	* admin.h: Add prototype for kadm5_setv4key_principal.

Wed May 28 13:34:17 1997  Barry Jaspan  <bjaspan@mit.edu>

	* admin.h: add prototype for kadm5_setkey_principal

	* misc_free.c (kadm5_free_key_data): add kadm5_free_data
	
Mon Mar 31 17:41:11 1997  Barry Jaspan  <bjaspan@mit.edu>

	* kadm_err.et, kadm_rpc.h, kadm_rpc_xdr.c: add support for
 	setkey_principal

Thu Jan 16 19:01:00 1997  Tom Yu  <tlyu@mit.edu>

	* Makefile.in (all-prerecurse): Update to use double-colon rules.

Wed Jan 15 20:43:01 1997  Tom Yu  <tlyu@mit.edu>

	* Makefile.in:
	* configure.in: Update to new libarary build procedure.

Mon Nov 11 17:01:40 1996  Barry Jaspan  <bjaspan@mit.edu>

	* kadm_rpc_xdr.c: fix memory leak handling key_data and tl_data

Wed Nov  6 10:20:36 1996  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* kadm_err.et: New error codes for KADM5_MISSING_CONF_PARAMS and 
		KADM5_BAD_SERVER_NAME.

Mon Nov  4 21:16:01 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* alt_prof.c (krb5_aprof_init): If the user specifies the config
		file using a configuration file, it must exist.
		Otherwise, krb5_aprof_init will return an error.
		(kadm5_get_config_params): If aprof_init returns an error,
		it should return an error as well.

Wed Nov  6 17:45:43 1996  Barry Jaspan  <bjaspan@mit.edu>
